experimental/parser/testdata/parser/syntax/lonely.proto.stderr.txt
warning: missing `package` declaration
 --> testdata/parser/syntax/lonely.proto
   = note: failing to specify a package places the file in the empty package
   = note: using the empty package is discouraged

error: unexpected `;` in `edition` declaration
  --> testdata/parser/syntax/lonely.proto:15:8
   | 
15 | edition;
   |        ^ expected `=`

error: unexpected `syntax` declaration
  --> testdata/parser/syntax/lonely.proto:17:1
   | 
15 | edition;
   | -------- previous declaration is here
16 | 
17 | syntax = ;
   | ^^^^^^^^^^ help: remove this
   = note: a file may only contain at most one `syntax` or `edition` declaration

error: unexpected `;` in `syntax` declaration
  --> testdata/parser/syntax/lonely.proto:17:10
   | 
17 | syntax = ;
   |          ^ expected expression

error: unexpected `package` declaration
  --> testdata/parser/syntax/lonely.proto:19:1
   | 
17 | syntax = ;
   | ---------- previous declaration is here
18 | 
19 | package test;
   | ^^^^^^^^^^^^^ 
   = note: a `package` declaration must be the first declaration in a file, or follow the `syntax` or `edition` declaration

encountered 4 errors and 1 warning
